--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
     <title>Puissance 4</title>
   </head>
-  <body>
+  <body class="bg-dark">
+    <div class="container-fluid ">
+      <div class="row justify-content-center">
+        <input type="text" id="play" />
+        <button class="btn btn-danger" id="submit">Submit</button>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
