--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="style.min.css" />
     <title>Puissance 4</title>
   </head>
-  <body class="bg-dark">
+  <body class="">
     <div class="container-fluid ">
-      <div class="row justify-content-center">
-        <input type="text" id="play" />
-        <button class="btn btn-danger" id="submit">Submit</button>
-      </div>
+      <div class="container justify-content-center" id="myGame"></div>
     </div>
-
+    <div class="ft-links">
+      <span
+        ><a class="ft-link" href="https://linkedin.com/in/zachbizimana"
+          >Lkdn.</a
+        ></span
+      >
+      <span><a class="ft-link" href="https://github.com/asab1rd">Gith</a></span>
+      <span
+        ><a class="ft-link" href="https://instagram.com/tchointeur"
+          >Inst.</a
+        ></span
+      >
+    </div>
+    <div class="ft-copyright">&copy; Copyright Artkodes 2020</div>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
