--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   </head>
   <body class="">
     <div class="container-fluid ">
+      <div class="won-container container-fluid" id="hasWon">
+        <div id="message">Player 1 Won</div>
+      </div>
       <div class="container justify-content-center" id="myGame"></div>
     </div>
     <div class="ft-links">
