--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/css/mdb.min.css"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.min.css" />
     <title>Puissance 4</title>
   </head>
   <body class="">
+    <div class="container-fluid full-screen chose-settings" id="settings">
+      <div class="settings-container"></div>
+    </div>
     <div class="container-fluid ">
       <div class="won-container container-fluid" id="hasWon">
         <div id="message">Player 1 Won</div>
@@ -32,9 +40,23 @@
     </div>
     <div class="ft-copyright">&copy; Copyright Artkodes 2020</div>
     <script
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+    ></script>
+    <!-- Bootstrap tooltips -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"
+    ></script>
+    <!-- Bootstrap core JavaScript -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"
+    ></script>
+    <!-- MDB core JavaScript -->
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.14.0/js/mdb.min.js"
     ></script>
     <script src="main.js" type="module"></script>
   </body>
