Updated design & added localstorage gestion

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid ">
+    <div class="container-fluid " id="app">
       <div class="container justify-content-center" id="myGame"></div>
     </div>
     <div class="ft-links">
