--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="row">
               <h5 class="chose-your-color">Choose your color</h5>
             </div>
-            <div class="row justify-content-center ">
+            <div class="row justify-content-center">
               <span
                 class="border chose-color elegant-dark rounded-circle"
                 data-color="elegant-dark"
@@ -125,7 +125,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid " id="app">
+    <div class="container-fluid" id="app">
       <div class="container justify-content-center" id="myGame"></div>
     </div>
     <div class="ft-links">
@@ -136,7 +136,7 @@
       >
       <span><a class="ft-link" href="https://github.com/asab1rd">Gith</a></span>
       <span
-        ><a class="ft-link" href="https://instagram.com/tchointeur"
+        ><a class="ft-link" href="https://instagram.com/artkodes"
           >Inst.</a
         ></span
       >
